Fixed display landing page on Firefox

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -497,7 +497,7 @@ input[data-error]::after {
 	white-space: nowrap;
 }
 .hero-text {
-	width: 146%;
+	width: 35vw;
 	font-weight: normal;
 	margin-top: 57px;
 	padding: 0;
